--- a/pages/miles-morales/spiderman1.html
+++ b/pages/miles-morales/spiderman1.html
@@ -11,8 +11,8 @@
 
 <body>
   <div class="s-wrapper">
-    <video autoplay loop>
-      <source src="../../assets/videos/spiderman-2018-trailer.mp4" type="video/mp4"/>
+    <video autoplay loop muted>
+      <source src="../../assets/videos/spiderman-2018-trailer.mp4" type="video/mp4" />
     </video>
     <!--  Coluna da esquerda com menu (Left Column with menu)  -->
     <div class="s-left-column">
