--- a/pages/miles-morales/spiderman2.html
+++ b/pages/miles-morales/spiderman2.html
@@ -11,7 +11,7 @@
 
 <body>
   <div class="s-wrapper">
-    <video autoplay loop>
+    <video autoplay loop muted>
       <source src="../../assets/videos/spiderman-2023-trailer.mp4" type="video/mp4"/>
     </video>
     <!--  Coluna da esquerda com menu (Left Column with menu)  -->
